--- a/index.html
+++ b/index.html
@@ -5,38 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Test by spereirag</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
     <div class="wrapper">
       <header>
         <h1>Test</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/spereirag/test">View the Project on GitHub <small>spereirag/test</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/spereirag/test/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/spereirag/test/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/spereirag/test">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <p>esto es un test</p>
       </header>
       <section>
         <h3>
 <a id="test" class="anchor" href="#test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>test</h3>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/spereirag">spereirag</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
   </body>
 </html>
