--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
       <section>
         <h3>
-<a id="test" class="anchor" href="#test" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>test</h3>
+	</a>test</h3>
       </section>
       <footer>
       </footer>
