--- a/index.html
+++ b/index.html
@@ -21,13 +21,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Test</h1>
-        <p>esto es un test</p>
+        <h1>bibibi test</h1>
       </header>
-      <section>
-        <h3>
-	</a>test</h3>
-      </section>
       <footer>
       </footer>
     </div>
